--- a/views/projects.html
+++ b/views/projects.html
@@ -55,7 +55,6 @@
   
 </head>
 
-<!--Style and script in here because of express-->
 
 
 
@@ -63,7 +62,7 @@
 
 <body >
 
-    <div class="Title" id="Title" data-scroll="0">Portfolio</div>
+    <div class="Title" id="Projects" data-scroll="0">Big Projects</div>
     <div id="Catogories">
         <a href="/projects"><div href="/projects" class="catagory" id="golfrush"><p>Big projects</p></div></a>
         <a href="/projects"><div href="/projects" class="catagory" id="jams"><p>Game jams</p></div></a>
