--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,8 +3,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Chango&family=Press+Start+2P&family=Ubuntu+Mono:wght@700&display=swap');
 
 body {
+    margin: 0;
+    padding: 0;
+    background-image: url("../images/background.png");
+    background-color: #740995;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.Main {
     padding: 0;
     margin: 20px;
+    margin-top: 60px;
     background-image: url("../images/background.png");
     background-attachment: fixed;
     background-size: cover;
@@ -14,36 +24,55 @@ a {
     text-decoration: none;
     color: black;
 }
+
+nav {
+    font-family: 'Ubuntu Mono', monospace;
+    font-size: larger;
+
+    width: 99%;
+    padding-left: 1%;
+    height: 40px;
+    line-height: 40px;
+    background-color: rgb(143, 61, 190);
+    position: fixed;
+    top: 0;
+    margin: 0;
+    z-index: 10;
+    box-shadow: rgba(185, 46, 240, 0.4) 0px 5px;
+    transition: box-shadow 0.2s ease-in-out;
+
+}
+.NavScrolled {
+    transition: box-shadow 0.2s ease-in-out;
+    position: fixed;
+    top: 0;
+    box-shadow: rgba(185, 46, 240, 0.4) 0px 5px, rgba(185, 46, 240, 0.3) 0px 10px, rgba(185, 46, 240, 0.2) 0px 15px, rgba(185, 46, 240, 0.1) 0px 20px, rgba(185, 46, 240, 0.05) 0px 25px;}
+
 #Title {
     transition-duration: 0.25s;
     transition-timing-function: linear;
     background-color: #B796AC;
     height: calc(50vh - 40px);
     width: 95%;
-    font-size: 1000%;
-    line-height: calc(50vh - 40px);
+    font-size: 12vh;
+    line-height: calc(20vh - 40px);
+    padding: 0;
     padding-left: 5%;
-    
+    margin: 0;
+    display: flexbox;
+
 }
-#Projects {
-    transition-duration: 0.25s;
-    transition-timing-function: linear;
-    background-color: #B796AC;
-    height: calc(50vh - 40px);
-    width: 95%;
-    font-size: 500%;
-    line-height: calc(50vh - 40px);
-    padding-left: 5%;
-    
+#Title p {
+    height: 0px;
+    width: 100%;
+    float: left;
+    position: relative;
+}
+#Title .sub {
+    font-size: 30%;
+    top: -7vh;
 }
 
-
-#Title.Titlescrolled {
-    transition-duration: 0.25s;
-    transition-timing-function: linear;
-    height: 20vh;
-    line-height: 25vh;
-}
 #Catogories {
     margin-top: 20px;
     height: 100vh;
@@ -54,9 +83,9 @@ a {
     transition-duration: 0.1s;
     transition-timing-function: ease-in-out;
     align-self: center;
-    margin-left: 0%;
+    margin-left: 10%;
     
-    height: 60vh;
+    height: 40vh;
     width: 80%;
     margin-top: 5px;
     background-color: #4C9F70;
@@ -65,13 +94,13 @@ a {
     border-color: #6dc593;
     border-style: solid;
     text-align: center;
-    line-height: 20vh;
+    line-height: 40vh;
 }
 .catagory:hover {
     transition-duration: 0.1s;
     transition-timing-function: ease-in-out;
     width: 85%;
-    margin-left: 5%;
+    margin-left: 7.5%;
     border-color: #81dfaa;
 
 }
@@ -89,6 +118,9 @@ a {
     background-attachment: scroll;
     background-position-y: center;
     font-family: 'Chango', cursive;
+}
+#golfrush p {
+    background-color: rgba(67, 255, 92, 0.5);
 }
 #jams {
     background-image: url("../images/jellysplit.png");
@@ -112,4 +144,69 @@ a {
 #programming p {
     background-color: rgba(163, 250, 155, 0.5);
 }
+#projects {
+    margin-top: 20px;
+    width: 100%;
+    display: block;
+}
+.project {
+    margin-top: 2vh;
+    position: relative;
+    transition: ease-in-out 2s;
+    display: block;
+}
 
+#projecttitle{
+    background-color: #B796AC;
+    height: 7vh;
+    width: 95vw;
+    font-size: 100%;
+    line-height: 3vh;
+    padding-top: 0.5vh;
+}
+
+.project p {
+    visibility: hidden;
+}
+
+.content {
+    height: 0;
+    background-color: #B796AC;
+    height: 0vh;
+    width: 100%;
+    font-size: 100%;
+    line-height: 3vh;
+    padding: 0;
+    transition: ease-in-out 2s;
+    overflow: hidden;
+}
+
+.open {
+    background-color: #B796AC;
+    height: 100vh;
+    width: 100%;
+    font-size: 100%;
+    line-height: 3vh;
+    padding-top: 0.5vh;
+    transition: ease-in-out 2s;
+    overflow: hidden;
+
+}
+
+.project p {
+    width: 100%;
+    height: 3vh;
+    line-height: 3vh;
+    font-size: 2vh;
+    margin-top: 2vh;
+    background-color: rgba(255,255,255,0.5);
+}
+
+
+#projectgolfrush #projecttitle {
+    background-image: url("../images/Golfrush.png");
+    background-size: 100%;
+    background-attachment: scroll;
+    background-position-y: center;
+    font-family: 'Chango', cursive;
+}
